Travel Journal/styles.css
/* for phones and tablets */
@media only screen and (max-width: 768px) {
    li a {
        display: block;
        list-style-type: none;
        text-decoration: none;
        padding: 0px;
        font-family: lucida handwriting;
        font-size: 15px;
    }
    
    * {
        font-size: 15px;
    }
}

* {
    background-color: rgb(79, 75, 91);
    color:rgb(162, 153, 187);
    margin: 0;
    padding: 0;
}

#heading_title_sunset {
    display: block;
    margin-top: 25px;
    margin-left: auto;
    margin-right: auto;
    height: 75vh;
    width: auto;
    border-radius: 100px;
    z-index: 1;
}

#traveljournal {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    padding-top: 50px;
    font-size: 50px;
    font-family: lucida handwriting;
    font-stretch: expanded;
    letter-spacing: 7px;
    text-shadow: 1px 1px 2px black, 0 0 25px rgb(135, 135, 177), 0 0 5px rgb(36, 36, 66);
}

nav {
    position: fixed;
    top: 0;
    left: 0;
    width: auto;
}

ul {
    width: 20px;
}

li {
    display: block;
    text-align: left;
    width: 20
}

li a {
    display: block;
    list-style-type: none;
    text-decoration: none;
    padding: 8px;
    font-family: lucida handwriting;
    font-size: 15px;
}

li a:hover:not(.active) {
    font-weight: bold;
    font-size: 20px;
}

.break {
    width: auto;
    height: 50vh;
}

.yearcar, .yearcamp, .yearestablished {
    font-size: 50px;
    font-weight: bold;
    text-shadow: 1px 1px 2px black, 0 0 25px rgb(135, 135, 177), 0 0 5px rgb(36, 36, 66);
    text-align: center;
    justify-content: center;
    padding-top: 20%;
}

.cartrips, .campingtrips, .married {
    font-size: 30;
    font-family: Lucida handwriting;
    font-stretch: expanded;
    letter-spacing: 5px;
    text-align: left;
    padding: 25px;
}

.row {
    display: flex;
    flex-direction: row;
    text-align: center;
    justify-content: center;
    height: 100vh;
}

.column {
    display: flex;
    flex-direction: column;
    padding: 20%;
    width: 30%;
}

.circle {
    display: flex;
    border-style: groove;
    border-radius: 50%;
    height: 150px;
    width: 150px;
    justify-content: center;
    color: linear-gradient(silver);
}

#ring1 {
    z-index: 5;
    position: relative;
    opacity: 80%;
    margin-right: 100px;
}

#ring2 {
    z-index: 4;
    position: absolute;
    opacity: 80%;
    margin-left: 100px;
}

#diamond {
    z-index: 3;
    position: relative;
    display: inline-block;
    border-left: 25px solid transparent;
    border-right:25px solid transparent;
    border-top: 30px solid silver;
    border-bottom: 25px solid transparent;
    height: 20px;
    width: 20px;
    transform: rotate(34deg);
    right: 40px;
    bottom: 20px;
}

#created {
    text-align: center;
    font-size: 15px;
    font-weight: bold;
    text-shadow: 1px 1px 2px black, 0 0 25px rgb(135, 135, 177), 0 0 5px rgb(36, 36, 66);
    margin-bottom: 50px;
    margin-top: 50px;
    font-family: lucida handwriting;
}

